infrastructure/argocd/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute

metadata:
  name: argocd
  namespace: argocd

  labels:
    app.kubernetes.io/name: argocd
    app.kubernetes.io/component: server
    app.kubernetes.io/part-of: kanboard-platform

spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: kanboard-gateway
      namespace: kanboard
      sectionName: https

  hostnames:
    - app.kubeace.in

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /argocd

      backendRefs:
        - group: ""
          kind: Service
          name: argocd-server
          port: 80
          weight: 1
